# repo-syncer

./: AGENTS.md  Cargo.toml  IDEAS.md  README.md  hk.pkl
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: check-file-length.sh
src/: app.rs  cache.rs  cli.rs  github.rs  handlers.rs  main.rs  sync.rs  types.rs  ui.rs
src/ui/: details.rs  help.rs  list.rs  mod.rs  overlays.rs  search.rs  title.rs
