[package]
name = "repo-syncer"
version = "0.1.0"
edition = "2021"
description = "A TUI tool to sync GitHub forks with their upstream repositories"
authors = ["Kevin Chen"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
fuzzy-matcher = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
collapsible_if = "allow"
